--- a/frontend/testCarrito.html
+++ b/frontend/testCarrito.html
@@ -35,6 +35,14 @@ href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
         <section id="cartSection" class="card p-4 mb-4 shadow bg-secondary">
             <h5 class="mb-3 text-center text-light">Carrito</h5>
             <ul id="cartList" class="list-group"></ul>
+            <div id="cartTotal" class="d-flex flex-column align-items-end">
+                <strong >Total:</strong>
+                <span id="totalPurchase" class="fw-bold fs-5">$0</span>
+                <div class="mt-3 d-flex justify-content-end gap-2">
+                    <button id="btnCancelPurchase" class="btn btn-danger">Cancelar pedido</button>
+                    <button id="btnFinalizePurchase" class="btn btn-primary">Finalizar compra</button>
+                </div>
+            </div>
         </section>
         
         <!-- Sección ITEM -->
@@ -64,7 +72,6 @@ href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
                 <button id="btnTestUpdateItem" class="btn btn-warning">Actualizar ítem</button>
                 <button id="btnTestDeleteItem" class="btn btn-danger">Eliminar ítem</button>
                 <button id="btnGetAllItems" class="btn btn-info text-white">Ver todos los ítems</button>
-                <button id="btnFinalizePurchase" class="btn btn-primary">Finalizar compra</button>
             </div>
         </section>
         
