--- a/frontend/testAdmin.html
+++ b/frontend/testAdmin.html
@@ -65,7 +65,7 @@
             <option value="id_rol_cliente">Cliente</option>
         </select>
         </div>
-        <button type="submit" class="btn btn-success w-100">Crear Usuario</button>
+        <button type="submit" class="btn btn-success w-100" id="btnCreateUser">Crear Usuario</button>
     </form>
 </div>
 
