--- a/frontend/testCRUD.html
+++ b/frontend/testCRUD.html
@@ -25,17 +25,26 @@
                             <input type="number" id="price" class="form-control" placeholder="Precio" required>
                         </div>
                         <div class="col-md-4">
-                            <input type="text" id="img" class="form-control" placeholder="URL Imagen" required>
+                            <input type="file" id="img" class="form-control" name="picture" placeholder="URL Imagen"
+                                required>
+                            <img id="preview" src="#" alt="Previsualización"
+                                style="max-width: 200px; margin-top: 10px; display: none;">
                         </div>
                         <div class="col-md-4">
-                            <input type="text" id="category" class="form-control" placeholder="Categoría" required>
+                            <select id="category" class="form-control" required></select>
                         </div>
                         <div class="col-md-4">
-                            <input type="text" id="active" class="form-control" placeholder="Activo" required>
+                            <div class="form-check">
+                                <input class="form-check-input" type="checkbox" id="active">
+                                <label class="form-check-label" for="active">
+                                    Activo
+                                </label>
+                            </div>
                         </div>
                         <div class="col-md-4">
                             <!-- estaba en type="number" -->
-                            <input type="text" id="hijodemilputa" class="form-control" placeholder="Producto ID" required>
+                            <input type="text" id="hijodemilputa" class="form-control" placeholder="Producto ID"
+                                required>
                         </div>
 
                     </div>
@@ -49,66 +58,72 @@
                     </div>
                 </form>
             </div>
-
-            <div class="card-body">
-                <h5 id="formTitulo">Agregar Venta</h5>
-                <form id="formSale">
-                    <div class="row g-3">
-                        <div class="col-md-4">
-                            <input type="text" id="inputClientName" class="form-control" placeholder="Nombre de cliente" required>
-                        </div>
-                        <div class="col-md-2">
-                            <input type="date" id="inputDate" class="form-control" placeholder="Fecha" required>
-                        </div>
-                        <div class="col-md-4">
-                            <input type="text" id="inputTotal" class="form-control" placeholder="Total" required>
-                        </div>
-                        <div class="col-md-4">
-                            <input type="text" id="inputSaleID" class="form-control" placeholder="Buscar por ID" >
-                        </div>
-                    </div>
-                    <input type="hidden" id="productoId">
-                    <div class="mt-3 d-flex gap-2">
-                        <button type="button" id = "btnGetAllSales" class="btn btn-success">Test getAll</button>
-                        <button type="button" id = "btnGetSale" class="btn btn-success" >Test GET</button>
-                        <button type="button" id="btnTestCreateSale" class="btn btn-warning">Test CREATE</button>
-                        <button type="button" id="btnTestUpdateSale" class="btn btn-info" onclick="testUpdateProducto()">Test UPDATE</button>
-                        <button type="button" id="btnTestDeleteSale" class="btn btn-danger" onclick="testDeleteProducto()">Test DELETE</button>
-                    </div>
-                </form>
-            </div>
-
-            <div class="card-body">
-                <h5 id="formTitulo">Agregar Detalle de la venta</h5>
-                <form id="formSaleDetails">
-                    <div class="row g-3">
-                        <div class="col-md-4">
-                            <input type="text" id="IDinputSale" class="form-control" placeholder="Venta ID" required>
-                        </div>
-                        <div class="col-md-2">
-                            <input type="text" id="inputProdIDdetails" class="form-control" placeholder="Producto ID" required>
-                        </div>
-                        <div class="col-md-4">
-                            <input type="text" id="inputQuantity" class="form-control" placeholder="Cantidad" required>
-                        </div>
-                        <div class="col-md-4">
-                            <input type="text" id="inputSubTotal" class="form-control" placeholder="SubTotal" required>
-                        </div>
-                        <div class="col-md-4">
-                            <input type="text" id="inputSaleDetailsID" class="form-control" placeholder="Buscar por ID" required>
-                        </div>
-                    </div>
-                    <input type="hidden" id="productoId">
-                    <div class="mt-3 d-flex gap-2">
-                        <button type="button" id="btnGetAllSalesDetails" class="btn btn-success">Test getAll</button>
-                        <button type="button" id="btnGetSaleDetail" class="btn btn-success">Test GET</button>
-                        <button type="button" id="btnTestCreateSaleDetail" class="btn btn-warning">Test CREATE</button>
-                        <button type="button" id="btnTestUpdateSaleDetail" class="btn btn-info">Test UPDATE</button>
-                        <button type="button" id="btnTestDeleteSaleDetail" class="btn btn-danger">Test DELETE</button>
-                    </div>
-                </form>
-            </div>
         </div>
+
+        <!-- <div class="card-body">
+            <h5 id="formTitulo">Agregar Venta</h5>
+            <form id="formSale">
+                <div class="row g-3">
+                    <div class="col-md-4">
+                        <input type="text" id="inputClientName" class="form-control" placeholder="Nombre de cliente"
+                            required>
+                    </div>
+                    <div class="col-md-2">
+                        <input type="date" id="inputDate" class="form-control" placeholder="Fecha" required>
+                    </div>
+                    <div class="col-md-4">
+                        <input type="text" id="inputTotal" class="form-control" placeholder="Total" required>
+                    </div>
+                    <div class="col-md-4">
+                        <input type="text" id="inputSaleID" class="form-control" placeholder="Buscar por ID">
+                    </div>
+                </div>
+                <input type="hidden" id="productoId">
+                <div class="mt-3 d-flex gap-2">
+                    <button type="button" id="btnGetAllSales" class="btn btn-success">Test getAll</button>
+                    <button type="button" id="btnGetSale" class="btn btn-success">Test GET</button>
+                    <button type="button" id="btnTestCreateSale" class="btn btn-warning">Test CREATE</button>
+                    <button type="button" id="btnTestUpdateSale" class="btn btn-info"
+                        onclick="testUpdateProducto()">Test UPDATE</button>
+                    <button type="button" id="btnTestDeleteSale" class="btn btn-danger"
+                        onclick="testDeleteProducto()">Test DELETE</button>
+                </div>
+            </form>
+        </div>
+
+        <div class="card-body">
+            <h5 id="formTitulo">Agregar Detalle de la venta</h5>
+            <form id="formSaleDetails">
+                <div class="row g-3">
+                    <div class="col-md-4">
+                        <input type="text" id="IDinputSale" class="form-control" placeholder="Venta ID" required>
+                    </div>
+                    <div class="col-md-2">
+                        <input type="text" id="inputProdIDdetails" class="form-control" placeholder="Producto ID"
+                            required>
+                    </div>
+                    <div class="col-md-4">
+                        <input type="text" id="inputQuantity" class="form-control" placeholder="Cantidad" required>
+                    </div>
+                    <div class="col-md-4">
+                        <input type="text" id="inputSubTotal" class="form-control" placeholder="SubTotal" required>
+                    </div>
+                    <div class="col-md-4">
+                        <input type="text" id="inputSaleDetailsID" class="form-control" placeholder="Buscar por ID"
+                            required>
+                    </div>
+                </div>
+                <input type="hidden" id="productoId">
+                <div class="mt-3 d-flex gap-2">
+                    <button type="button" id="btnGetAllSalesDetails" class="btn btn-success">Test getAll</button>
+                    <button type="button" id="btnGetSaleDetail" class="btn btn-success">Test GET</button>
+                    <button type="button" id="btnTestCreateSaleDetail" class="btn btn-warning">Test CREATE</button>
+                    <button type="button" id="btnTestUpdateSaleDetail" class="btn btn-info">Test UPDATE</button>
+                    <button type="button" id="btnTestDeleteSaleDetail" class="btn btn-danger">Test DELETE</button>
+                </div>
+            </form>
+        </div> -->
+    </div>
     </div>
 
     <script src="assets/js/testCRUD.js"></script>
