Corrección en filtros por categoría

--- a/frontend/products.html
+++ b/frontend/products.html
@@ -34,11 +34,7 @@
                 <i class="fas fa-filter me-2"></i>Filtrar por categoría
             </h5>
             <div class="text-center">
-                <button class="btn filter-btn active" data-category="all">Todos</button>
-                <button class="btn filter-btn" data-category="proteina">Proteínas</button>
-                <button class="btn filter-btn" data-category="creatina">Creatina</button>
-                <button class="btn filter-btn" data-category="pre-entreno">Pre-Entreno</button>
-                <button class="btn filter-btn" data-category="vitaminas">Vitaminas</button>
+                <div id="category-filters"></div>
             </div>
         </div>
 
