--- a/frontend/testAdmin.html
+++ b/frontend/testAdmin.html
@@ -1,76 +1,84 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Login</title>
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-<style>
-    body {
-    background-color: #f5f5f5;
-    }
-    .login-container {
-    max-width: 400px;
-    margin: 80px auto;
-    padding: 30px;
-    background-color: white;
-    border-radius: 10px;
-    box-shadow: 0 0 15px rgba(0,0,0,0.1);
-    }
-</style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Login</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <style>
+        body {
+            background-color: #f5f5f5;
+        }
+
+        .login-container {
+            max-width: 400px;
+            margin: 80px auto;
+            padding: 30px;
+            background-color: white;
+            border-radius: 10px;
+            box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
+        }
+    </style>
 </head>
+
 <body>
 
-<div class="login-container">
-    <h2 class="text-center mb-4">Iniciar Sesión</h2>
-    <form id="loginForm" action="/login" method="POST">
-    <div class="mb-3">
-        <label for="email" class="form-label">Correo electrónico</label>
-        <input type="email" class="form-control" id="email" name="email" placeholder="ejemplo@correo.com" required>
+    <div class="login-container">
+        <h2 class="text-center mb-4">Iniciar Sesión</h2>
+        <form id="loginForm" action="/login" method="POST">
+            <div class="mb-3">
+                <label for="email" class="form-label">Correo electrónico</label>
+                <input type="email" class="form-control" id="email" name="email" placeholder="ejemplo@correo.com"
+                    required>
+            </div>
+            <div class="mb-3">
+                <label for="password" class="form-label">Contraseña</label>
+                <input type="password" class="form-control" id="password" name="password" placeholder="********"
+                    required>
+            </div>
+            <button type="button" class="btn btn-primary w-100" id="btnLogin">Iniciar Sesión</button>
+            <button type="button" class="btn btn-danger w-100 mt-2" id="btnLogout">cerrar sesion</button>
+            <button type="button" class="btn btn-secondary w-100 mt-2" id="btnRoles">crear roles</button>
+            <button type="button" class="btn btn-secondary w-100 mt-2" id="btnShowRoles">mostrar roles</button>
+        </form>
+        <div class="text-center mt-3">
+            <a href="/register">¿No tenés cuenta? Registrate</a>
+        </div>
     </div>
-    <div class="mb-3">
-        <label for="password" class="form-label">Contraseña</label>
-        <input type="password" class="form-control" id="password" name="password" placeholder="********" required>
+    <div class="login-container mt-5">
+        <h2 class="text-center mb-4">Crear Usuario</h2>
+        <form id="createUserForm" action="/usuarios" method="POST">
+            <div class="mb-3">
+                <label for="name" class="form-label">Nombre</label>
+                <input type="text" class="form-control" id="name" name="name" placeholder="Tu nombre" required>
+            </div>
+            <div class="mb-3">
+                <label for="emailCreate" class="form-label">Correo electrónico</label>
+                <input type="email" class="form-control" id="emailCreate" name="email" placeholder="ejemplo@correo.com"
+                    required>
+            </div>
+            <div class="mb-3">
+                <label for="passwordCreate" class="form-label">Contraseña</label>
+                <input type="password" class="form-control" id="passwordCreate" name="password" placeholder="********"
+                    required>
+            </div>
+
+            <!--carga de roles dinamicamente -->
+            <div class="mb-3">
+                <label class="form-label">Rol</label>
+                <div id="roleCheckboxContainer">
+                    <!-- roles desde el back -->
+                </div>
+            </div>
+
+            <button type="submit" class="btn btn-success w-100" id="btnCreateUser">Crear Usuario</button>
+        </form>
     </div>
-    <button type="button" class="btn btn-primary w-100" id="btnLogin">Iniciar Sesión</button>
-    <button type="button" class="btn btn-danger w-100 mt-2" id="btnLogout">cerrar sesion</button>
-    <button type="button" class="btn btn-secondary w-100 mt-2" id="btnRoles">crear roles</button>
-    <button type="button" class="btn btn-secondary w-100 mt-2" id="btnShowRoles">mostrar roles</button>
-    </form>
-    <div class="text-center mt-3">
-    <a href="/register">¿No tenés cuenta? Registrate</a>
-    </div>
-</div>
-<div class="login-container mt-5">
-    <h2 class="text-center mb-4">Crear Usuario</h2>
-    <form id="createUserForm" action="/usuarios" method="POST">
-        <div class="mb-3">
-            <label for="name" class="form-label">Nombre</label>
-            <input type="text" class="form-control" id="name" name="name" placeholder="Tu nombre" required>
-        </div>
-        <div class="mb-3">
-            <label for="emailCreate" class="form-label">Correo electrónico</label>
-            <input type="email" class="form-control" id="emailCreate" name="email" placeholder="ejemplo@correo.com" required>
-        </div>
-        <div class="mb-3">
-            <label for="passwordCreate" class="form-label">Contraseña</label>
-            <input type="password" class="form-control" id="passwordCreate" name="password" placeholder="********" required>
-        </div>
-        <div class="mb-3">
-            <label for="rol" class="form-label">Rol</label>
-            <select class="form-select" id="rol" name="rol" required>
-            <option value="">Seleccioná un rol</option>
-            <!-- Opciones de roles deben venir desde el backend o JS -->
-            <option value="id_rol_admin">Admin</option>
-            <option value="id_rol_cliente">Cliente</option>
-        </select>
-        </div>
-        <button type="submit" class="btn btn-success w-100" id="btnCreateUser">Crear Usuario</button>
-    </form>
-</div>
 
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-<script src="assets/js/testAdmin.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="assets/js/testAdmin.js"></script>
 </body>
+
 </html>
