--- a/frontend/index.html
+++ b/frontend/index.html
@@ -56,16 +56,7 @@
                         </button>
                     </div>
 
-                    <div class="features row text-white">
-                        <div class="col-md-4">
-                            <div class="feature-item">
-                                <div class="feature-icon">
-                                    <i class="fas fa-shipping-fast"></i>
-                                </div>
-                                <h6 class="fw-bold">Rápido</h6>
-                                <small>Compra en minutos</small>
-                            </div>
-                        </div>
+                    <div class="features row text-black justify-content-center">
                         <div class="col-md-4">
                             <div class="feature-item">
                                 <div class="feature-icon">
