--- a/frontend/menuAdmin.html
+++ b/frontend/menuAdmin.html
@@ -66,7 +66,7 @@
                     </div>
                     <div class="card">
                         <h3>Crear Nuevo Usuario</h3>
-                        <button class="btn btn-primary mt-4 p-2.5">Crear</button>
+                        <button class="btn btn-primary mt-4 p-2.5" id="btnCreateUser">Crear</button>
                     </div>
                 </div>
 
