--- a/frontend/menuAdmin.html
+++ b/frontend/menuAdmin.html
@@ -33,6 +33,13 @@
                     </svg>
                     <span class="menu-text">Ver Productos</span>
                 </div>
+
+                <div class="menu-item" data-section="ventas">
+                    <svg class="menu-icon" viewBox="0 0 24 24">
+                        <path d="M11 5H6a2 2 0 00-2 2v11a2 2 0 002 2h11a2 2 0 002-2v-5m-1.414-9.414a2 2 0 112.828 2.828L11.828 15H9v-2.828l8.586-8.586z"/>
+                    </svg>
+                    <span class="menu-text">Ver Ventas</span>
+                </div>
                 
                 <div class="menu-item" data-section="estadisticas">
                     <svg class="menu-icon" viewBox="0 0 24 24">
@@ -139,7 +146,30 @@
                                         <button class="btn btn-secondary">Editar</button>
                                     </td>
                                 </tr>
-                                
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Pedidos Section -->
+            <div class="content-section" id="ventas">
+                <div class="data-table">
+                    <div class="table-header">
+                        <h3>Lista de Pedidos</h3>
+                    </div>
+                    <div class="table-content">
+                        <table id="orders-table">
+                            <thead>
+                                <tr>
+                                    <th>ID</th>
+                                    <th>Fecha</th>
+                                    <th>Cliente</th>
+                                    <th>Total</th>
+                                    <th>Acciones</th>
+                                </tr>
+                            </thead>
+                            <tbody id="orders-table-body">
                             </tbody>
                         </table>
                     </div>
@@ -212,7 +242,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
