cambio de diseño de botones de acceso rapido

--- a/frontend/login.html
+++ b/frontend/login.html
@@ -22,7 +22,10 @@
             <button type="button" class="btn btn-primary w-100" id="btnLogin">Iniciar Sesión</button>
         </form>
         <div class="text-center mt-3">
-            <button type="button" class="btn btn-secondary" id="btnQuickLogin">Iniciar sesión rápido</button>
+            <button type="button" class="btn btn-outline-primary" id="btnLoginSuper">Iniciar sesión como superAdmin</button>
+        </div>
+        <div class="text-center mt-3">
+            <button type="button" class="btn btn-outline-primary" id="btnLoginAdmin">Iniciar sesión como Admin</button>
         </div>
     </div>
 
