--- a/frontend/menuAdmin.html
+++ b/frontend/menuAdmin.html
@@ -165,15 +165,6 @@
                                             </select>
                                         </div>
 
-                                        <!-- Producto ID -->
-                                        <!-- <div class="col-md-6">
-                                            <label for="hijodemilputa" class="form-label">
-                                                <i class="fas fa-hashtag me-1"></i>ID del Producto
-                                            </label>
-                                            <input type="text" id="hijodemilputa" class="form-control"
-                                                placeholder="ID único del producto" required>
-                                        </div> -->
-
                                         <!-- Estado Activo -->
                                         <div class="col-md-6">
                                             <label class="form-label">
@@ -218,10 +209,10 @@
                                         class="btn btn-warning-custom btn-custom">
                                         <i class="fas fa-plus me-1"></i>Crear Producto
                                     </button>
-                                    <!-- <button type="button" id="btnTestUpdateProduct" class="btn btn-custom">
-                                        <i class="fas fa-edit me-1"></i>Test UPDATE
-                                    </button>
-                                    <button type="button" id="btnTestDeleteProduct"
+                                     <button type="button" id="btnUpdateProduct" class="btn btn-success-custom">
+                                        <i class="fas fa-edit me-1"></i>Editar Producto
+                                    </button> 
+                                    <!-- <button type="button" id="btnTestDeleteProduct"
                                         class="btn btn-danger-custom btn-custom">
                                         <i class="fas fa-trash me-1"></i>Test DELETE
                                     </button> -->
@@ -242,7 +233,7 @@
                 <div class="data-table">
                     <div class="table-header d-flex justify-content-between align-items-center">
                         <h3>Inventario de Productos</h3>
-                        <button type="button" class="btn btn-light-custom " data-bs-toggle="modal"
+                        <button data-action="create" type="button" class="btn btn-light-custom " data-bs-toggle="modal"
                             data-bs-target="#productModal">
                             <i class="fas fa-plus me-2"></i>Crear Producto
                         </button>
@@ -259,20 +250,7 @@
                                     <th>Acciones</th>
                                 </tr>
                             </thead>
-                            <tbody id="products-table-body">
-                                <tr>
-                                    <td>PRO001</td>
-                                    <td>Whey Protein Isolate</td>
-                                    <td>Proteínas</td>
-                                    <td>$89.99</td>
-                                    <td>45</td>
-                                    <td><span class="status active">Activo</span></td>
-                                    <td>
-                                        <button class="btn btn-primary">Ver</button>
-                                        <button class="btn btn-secondary">Editar</button>
-                                    </td>
-                                </tr>
-                            </tbody>
+                            <tbody id="products-table-body"></tbody>
                         </table>
                     </div>
                 </div>
