--- a/frontend/menuAdmin.html
+++ b/frontend/menuAdmin.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/menuAdmin.css">
+
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/frontend/assets/css/formCreateUser.css">
 </head>
 
 <body>
@@ -103,6 +106,38 @@
                         </table>
                     </div>
                 </div>
+
+
+                <div class="login-container mt-5">
+                    <h2 class="text-center mb-4">Modificar Usuario</h2>
+                    <form id="createUserForm" action="/usuarios" method="POST">
+                        <div class="mb-3">
+                            <label for="name" class="form-label">Nombre</label>
+                            <input type="text" class="form-control" id="user-name" name="name" placeholder="Tu nombre" required>
+                        </div>
+                        <div class="mb-3">
+                            <label for="emailCreate" class="form-label">Correo electrónico</label>
+                            <input type="email" class="form-control" id="user-emailCreate" name="email" placeholder="ejemplo@correo.com" required>
+                        </div>
+                        <div class="mb-3">
+                            <label for="passwordCreate" class="form-label">Contraseña</label>
+                            <input type="password" class="form-control" id="user-passwordCreate" name="password" placeholder="********" required>
+                        </div>
+
+                        <!--carga de roles dinamicamente -->
+                        <div class="mb-3">
+                            <label class="form-label">Rol</label>
+                            <div id="roleCheckboxContainer">
+                                <!-- roles desde el back -->
+                            </div>
+                        </div>
+
+                        <button type="submit" class="btn btn-success w-100" id="btnUpdateUser">Modificar Usuario</button>
+                    </form>
+                    <button class="btn btn-secondary w-100 mt-2" id="btnFormReset">limpiar</button>
+                </div>
+
+
             </div>
 
             <!-- Productos Section -->
@@ -209,7 +244,7 @@
                                         class="btn btn-warning-custom btn-custom">
                                         <i class="fas fa-plus me-1"></i>Crear Producto
                                     </button>
-                                     <button type="button" id="btnUpdateProduct" class="btn btn-success-custom">
+                                    <button type="button" id="btnUpdateProduct" class="btn btn-success-custom">
                                         <i class="fas fa-edit me-1"></i>Editar Producto
                                     </button> 
                                     <!-- <button type="button" id="btnTestDeleteProduct"
@@ -348,7 +383,7 @@
             </div>
 
         </div>
-
+        
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
         <script src="assets/js/menuAdmin.js"></script>
 </body>
