resolucion de errores para actualizar usarios

--- a/frontend/menuAdmin.html
+++ b/frontend/menuAdmin.html
@@ -132,7 +132,7 @@
                             </div>
                         </div>
 
-                        <button type="submit" class="btn btn-success w-100" id="btnUpdateUser">Modificar Usuario</button>
+                        <button type="button" class="btn btn-success w-100" id="btnUpdateUser">Modificar Usuario</button>
                     </form>
                     <button class="btn btn-secondary w-100 mt-2" id="btnFormReset">limpiar</button>
                 </div>
