--- a/frontend/cart.html
+++ b/frontend/cart.html
@@ -19,7 +19,7 @@
         <div class="container">
             <div class="row align-items-center py-3">
                 <div class="col-md-6">
-                    <h2 class="mb-0 text-primary">
+                    <h2 class="mb-0 logo">
                         <i class="fas fa-shopping-cart me-2"></i>Tu Carrito
                     </h2>
                 </div>
