Eliminacion de etiqueta html item

--- a/frontend/cart.html
+++ b/frontend/cart.html
@@ -23,9 +23,9 @@
                         <i class="fas fa-shopping-cart me-2"></i>Tu Carrito
                     </h2>
                 </div>
-                <div class="col-md-6 text-end">
+                <!-- <div class="col-md-6 text-end">
                     <span class="badge bg-primary fs-6" id="itemCount">0 items</span>
-                </div>
+                </div> -->
             </div>
         </div>
     </div>
