--- a/frontend/cart.html
+++ b/frontend/cart.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/cart.css">
-
+    <link rel="icon" href="assets/img/favicon.svg">
 </head>
 <body>
     <button class="back-btn" onclick="goBack()">
