--- a/frontend/formCreateUser.html
+++ b/frontend/formCreateUser.html
@@ -6,6 +6,7 @@
     <title>Crear Usuario - Panel Admin</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="/frontend/assets/css/formCreateUser.css">
+    <link rel="icon" href="assets/img/favicon.svg">
 </head>
 <body>
     <div class="login-container mt-5">
