--- a/frontend/login.html
+++ b/frontend/login.html
@@ -6,6 +6,7 @@
     <title>Iniciar Sesión - Panel Admin</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="/frontend/assets/css/login.css">
+    <link rel="icon" href="assets/img/favicon.svg">
 </head>
 <body>
     <div class="login-container">
