--- a/frontend/menuAdmin.html
+++ b/frontend/menuAdmin.html
@@ -9,7 +9,7 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
 
     <link rel="stylesheet" href="assets/css/menuAdmin.css">
-
+    <link rel="icon" href="assets/img/favicon.svg">
 </head>
 
 <body>
