--- a/frontend/menuAdmin.html
+++ b/frontend/menuAdmin.html
@@ -335,6 +335,28 @@
                 </div>
             </div>
 
+            <div class="modal fade" id="saleDetailsModal" tabindex="-1" aria-labelledby="saleDetailsModalLabel" aria-hidden="true">
+                <div class="modal-dialog modal-lg">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title" id="saleDetailsModalLabel">
+                                <i class="fas fa-receipt me-2"></i>Detalles de la Venta
+                            </h5>
+                            <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal" aria-label="Close"></button>
+                        </div>
+                        <div class="modal-body" id="saleDetailsContent">
+                            <!-- El contenido se cargará aquí -->
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
+                            <button type="button" class="btn btn-primary" onclick="printSaleDetails()">
+                                <i class="fas fa-print me-2"></i>Imprimir
+                            </button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
             <!-- Estadísticas Section -->
             <div class="content-section" id="estadisticas">
                 <div class="cards-grid">
@@ -406,6 +428,7 @@
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="assets/js/menuAdmin.js"></script>
+    
 </body>
 
 </html>
