--- a/frontend/menuAdmin.html
+++ b/frontend/menuAdmin.html
@@ -150,6 +150,7 @@
                                     <th>Nombre</th>
                                     <th>Email</th>
                                     <th>Roles</th>
+                                    <th>Estado</th>
                                     <th>Fecha Registro</th>
                                     <th>Acciones</th>
                                 </tr>
@@ -349,9 +350,6 @@
                         </div>
                         <div class="modal-footer">
                             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
-                            <button type="button" class="btn btn-primary" onclick="printSaleDetails()">
-                                <i class="fas fa-print me-2"></i>Imprimir
-                            </button>
                         </div>
                     </div>
                 </div>
