Cambios minimos en el ticket

--- a/frontend/ticket.html
+++ b/frontend/ticket.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
@@ -85,8 +85,8 @@
         </div>
 
         <div class="text-center mt-4">
-            <button id="downloadPdfBtn" class="btn btn-outline-light px-4 py-2 rounded-pill shadow-sm">
-                <i class="fas fa-file-pdf me-2 text-danger"></i> Descargar Ticket en PDF
+            <button id="downloadPdfBtn" class="btn btn-danger px-4 py-2 rounded-pill shadow-sm">
+                <i class="fas fa-file-pdf me-2 text-white"></i> Imprimir Ticket
             </button>
         </div>
     </div>
