Algunos cambios de idioma en html, implementación de is-valid en login e index y botón de volver al inicio en ticket.

--- a/frontend/ticket.html
+++ b/frontend/ticket.html
@@ -85,10 +85,10 @@
         </div>
 
         <div class="text-center mt-4">
-            <button id="downloadPdfBtn" class="btn btn-danger px-4 py-2 rounded-pill shadow-sm">
-                <i class="fas fa-file-pdf me-2 text-white"></i> Imprimir Ticket
-            </button>
+            <button class="btn btn-primary px-4 py-2 rounded-pill shadow-sm" id="goBackBtn"><i class="fas fa-arrow-left me-2"></i>VOLVER AL INICIO</button>
+            <button id="downloadPdfBtn" class="btn btn-danger px-4 py-2 rounded-pill shadow-sm"><i class="fas fa-file-pdf me-2 text-white"></i> Imprimir Ticket</button>
         </div>
+
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
