--- a/frontend/index.html
+++ b/frontend/index.html
@@ -48,6 +48,7 @@
                         </label>
                         <input type="text" class="form-control form-control-lg" id="inputClientName"
                             placeholder="Tu nombre completo..." required>
+                        <div id="nameError" class="text-danger mt-2" style="display: none;">¡Ingresá tu nombre porfavor!</div>
                     </div>
 
                     <div class="text-center mb-4">
